# board-game-lang

./: CONTRIBUTING.md  Cargo.toml  README.md  dev-env.nix  pl-details.md
design-docs/: pl-details.md  pl-details.md~  web-architecture.md  web-architecture.md~
frontend/: README.md  angular.json  index.html  karma.conf.js  package-lock.json  package.json
frontend/e2e/src/: app.e2e-spec.ts
frontend/js/: index.js
frontend/src/: index.html
frontend/src/app/: app.component.spec.ts  app.component.ts
src/: main.rs  parser.rs  stream_util.rs
