[package]
name = "game-lang"
version = "0.1.0"
authors = ["Heman Gandhi <hemangandhi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.8"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.3.4", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
tokio-tungstenite = "0.12.0"